CSS fixes & added acknowledgement

--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -80,12 +80,13 @@
 								<h3><strong>Step 3:</strong> Link the script to your account</h3>
 								<ul class="userscript-list">
 									<li><strong>Open or refresh your game window</strong> after installing the script.</li>
-									<li>A popup will be displayed with an authentication link. <strong>Click on the link</strong> in the popup.</li>
+                  <li>The first time you try to index a report or view town intel, <strong>a popup will be displayed</strong> with an activation link.</li>
+									<li><strong>Click on the activation link</strong> in the popup. This will open a new browser window at grepodata.com.</li>
 									<li><strong>Sign in</strong> to your GrepoData account after clicking on the link. This will link the script to your personal account.</li>
 								</ul>
 							</div>
 							<div class="col-xs-12 col-sm-12 col-lg-6 userscript-img-container">
-								<img class="userscript-img" src="../../../../../assets/images/link_script.png" />
+								<img class="userscript-img" src="../../../../../assets/images/link_script.png?v=1" />
 							</div>
 						</div>
 					</div>
