--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -77,9 +77,13 @@
   <div class="alert alert-gd-1">
     <h2 class="gd-primary">Is it allowed?</h2>
     <div class="faq-content">
-      Our script does not automate any gameplay elements, and therefore is in compliance with the overall rules.
-      Each interaction with the city indexer tool requires a manual action by the user, which means you are unlikely to get a ban for using the tool.
-      <br/>Official approval is still pending. <a href="https://en.forum.grepolis.com/index.php?threads/grepodata-enemy-city-indexer-pending-approval.62245/#post-1057206" target="_blank">You can find more info about this here.</a>
+      <strong>Yes!</strong> Our script has official approval on a global level.
+      <ul>
+        <li><a href="https://wiki.en.grepolis.com/wiki/Approved_Scripts" target="_blank">https://wiki.en.grepolis.com/wiki/Approved_Scripts</a></li>
+        <li><a href="https://wiki.de.grepolis.com/wiki/Community-Projekte" target="_blank">https://wiki.de.grepolis.com/wiki/Community-Projekte</a></li>
+        <li><a href="https://it.forum.grepolis.com/index.php?threads/lista-script-tool-approvati.3691/" target="_blank">https://it.forum.grepolis.com/index.php?threads/lista-script-tool-approvati.3691/</a></li>
+        <li>Others (please check your own local wiki, this is not an exhaustive list)</li>
+      </ul>
     </div>
   </div>
   <div class="alert alert-gd-1">
