--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -211,6 +211,31 @@
 </div>
 
 
+<!--Credits-->
+<div #creditText class="item content">
+  <div class="container">
+    <div class="col-md-12 text-center" >
+      <div>
+        <h2><span class="uppercase">ACKNOWLEDGEMENT</span></h2>
+        <hr>
+        <p>
+          GrepoData is created for the community, by the community. A special thanks to the following people for their contributions:
+        </p>
+        <strong>Vít Dolínek (LG)</strong> - For your countless contributions, creating the Discord bot, and pushing the frontend to the next level<br/>
+        <strong>Shuri2060</strong> - For your valuable feedback, ideas and contributions to the discussion<br/>
+        <strong>megasmorf</strong> - For your contributions to the indexer & Discord bot<br/>
+        <strong>Gandalf13</strong> - For your help in the early days<br/>
+      </div>
+
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+    </div>
+  </div>
+</div>
+
+
 <!-- FOOTER =============================-->
 <div class="footer text-center">
   <div class="container">
