--- a/src/app/indexer/siege/siege.component.html
+++ b/src/app/indexer/siege/siege.component.html
@@ -36,16 +36,16 @@
 					<div class="conquest-contents" style="max-width: 100% !important;" [ngClass]="{ 'conquest-card': isCard || !embedded }">
 						<div class="col-xs-12 text-center conquest-title">
 							<strong class="conquest-subject" *ngIf="!hideKey">
-								<a routerLink="/indexer/town/{{key}}/{{world}}/{{conquest?.town_id}}">
+								<a routerLink="/intel/town/{{world}}/{{conquest?.town_id}}">
 									<img src="../../assets/images/town_ico.png"/>&nbsp;{{conquest.town_name}}
 								</a>
 								(
-								<span *ngIf="conquest.player_name!=''&&conquest.player_id!=0"><a routerLink="/indexer/player/{{key}}/{{world}}/{{conquest?.player_id}}">
+								<span *ngIf="conquest.player_name!=''&&conquest.player_id!=0"><a routerLink="/intel/player/{{world}}/{{conquest?.player_id}}">
 											        <img src="../../assets/images/player_ico.png"/>&nbsp;{{conquest.player_name}}
 										        </a></span>
 								<span *ngIf="conquest.player_id==0||conquest.player_name==''">Ghost town</span>
 								<span *ngIf="conquest.alliance_name!=''&&conquest.alliance_id!=0"><span *ngIf="conquest.player_name!=''">, </span>
-											        <a routerLink="/indexer/alliance/{{key}}/{{world}}/{{conquest?.alliance_id}}">
+											        <a routerLink="/intel/alliance/{{world}}/{{conquest?.alliance_id}}">
 											        <img src="../../assets/images/ally_ico.png"/>&nbsp;{{conquest.alliance_name}}
 										        </a></span>
 								)
@@ -85,7 +85,7 @@
 								<div class="col-xs-6 text-left left att"  [ngStyle]="{'max-height': isCard?'96px':'144px'}">
 									Attacking<span class="hidden-xs hidden-sm" style="font-style: italic;">&nbsp;({{conquest.num_attacks_counted}} attack<span *ngIf="conquest.num_attacks_counted>1">s</span>)</span>
 									<div *ngFor="let bell of conquest.belligerent_all" style="direction: ltr;">
-										<a *ngIf="!hideKey" routerLink="/indexer/alliance/{{key}}/{{world}}/{{bell.alliance_id}}">
+										<a *ngIf="!hideKey" routerLink="/intel/alliance/{{world}}/{{bell.alliance_id}}">
 											<img src="../../assets/images/ally_ico.png"/>&nbsp;{{bell.alliance_name}}
 										</a>
 										<a *ngIf="hideKey" routerLink="/alliance" [queryParams]="{world: world, id: bell.alliance_id}">
@@ -190,21 +190,21 @@
 												<div class="conquest-report-title">
 													<!--{{report.date | Datex : "D MMM HH:mm"}}&nbsp;&nbsp;-&nbsp;-->
 													<span *ngIf="report?.attacker?.friendly==false && report?.attacker?.town_id > 0">
-														<a *ngIf="!hideKey" routerLink="/indexer/town/{{key}}/{{world}}/{{report?.attacker?.town_id}}">
+														<a *ngIf="!hideKey" routerLink="/intel/town/{{world}}/{{report?.attacker?.town_id}}">
 															<img src="../../assets/images/town_ico.png"/>&nbsp;{{report?.attacker?.town_name}}
 														</a>
-														<a *ngIf="hideKey" routerLink="/conquest/town/{{world}}/{{report?.attacker?.town_id}}">
+														<a *ngIf="hideKey" routerLink="/intel/town/{{world}}/{{report?.attacker?.town_id}}">
 															<img src="../../assets/images/town_ico.png"/>&nbsp;{{report?.attacker?.town_name}}
 														</a>
 													</span>
 													<span *ngIf="report?.attacker?.player_name!=''">
 														&nbsp;
-														<a *ngIf="report?.attacker?.friendly!=true && !hideKey" routerLink="/indexer/player/{{key}}/{{world}}/{{report?.attacker?.player_id}}"><img src="../../assets/images/player_ico.png"/>{{report?.attacker?.player_name}}</a>
+														<a *ngIf="report?.attacker?.friendly!=true && !hideKey" routerLink="/intel/player/{{world}}/{{report?.attacker?.player_id}}"><img src="../../assets/images/player_ico.png"/>{{report?.attacker?.player_name}}</a>
 														<a *ngIf="report?.attacker?.friendly==true || hideKey" routerLink="/player" [queryParams]="{world: world, id: report?.attacker?.player_id}"><img src="../../assets/images/player_ico.png"/>{{report?.attacker?.player_name}}</a>
 														&nbsp;
 								          </span>
 													<span *ngIf="report?.attacker?.alliance_id!=0 && allianceNames[report?.attacker?.alliance_id]">
-										        <a *ngIf="report?.attacker?.friendly!=true && !hideKey" routerLink="/indexer/alliance/{{key}}/{{world}}/{{report?.attacker?.alliance_id}}"><img src="../../assets/images/ally_ico.png"/>{{allianceNames[report?.attacker?.alliance_id]}}</a>
+										        <a *ngIf="report?.attacker?.friendly!=true && !hideKey" routerLink="/intel/alliance/{{world}}/{{report?.attacker?.alliance_id}}"><img src="../../assets/images/ally_ico.png"/>{{allianceNames[report?.attacker?.alliance_id]}}</a>
 										        <a *ngIf="report?.attacker?.friendly==true || hideKey" routerLink="/alliance" [queryParams]="{world: world, id: report?.attacker?.alliance_id}"><img src="../../assets/images/ally_ico.png"/>&nbsp;{{allianceNames[report?.attacker?.alliance_id]}}</a>
 													</span>
 													<span *ngIf="report?.attacker?.friendly==true && !hideKey">
