--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -79,9 +79,10 @@
     <div class="faq-content">
       <strong>Yes!</strong> Our script has official approval on a global level.
       <ul>
-        <li><a href="https://wiki.en.grepolis.com/wiki/Approved_Scripts" target="_blank">https://wiki.en.grepolis.com/wiki/Approved_Scripts</a></li>
-        <li><a href="https://wiki.de.grepolis.com/wiki/Community-Projekte" target="_blank">https://wiki.de.grepolis.com/wiki/Community-Projekte</a></li>
-        <li><a href="https://it.forum.grepolis.com/index.php?threads/lista-script-tool-approvati.3691/" target="_blank">https://it.forum.grepolis.com/index.php?threads/lista-script-tool-approvati.3691/</a></li>
+        <li>EN: <a href="https://wiki.en.grepolis.com/wiki/Approved_Scripts" target="_blank">https://wiki.en.grepolis.com/wiki/Approved_Scripts</a></li>
+        <li>DE: <a href="https://wiki.de.grepolis.com/wiki/Community-Projekte" target="_blank">https://wiki.de.grepolis.com/wiki/Community-Projekte</a></li>
+        <li>NL: <a href="https://wiki.nl.grepolis.com/wiki/Scripts" target="_blank">https://wiki.nl.grepolis.com/wiki/Scripts</a></li>
+        <li>IT: <a href="https://it.forum.grepolis.com/index.php?threads/lista-script-tool-approvati.3691/" target="_blank">https://it.forum.grepolis.com/index.php?threads/lista-script-tool-approvati.3691/</a></li>
         <li>Others (please check your own local wiki, this is not an exhaustive list)</li>
       </ul>
     </div>
