--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -664,3 +664,95 @@
 .attack_type32x32.conqueror {
   background: url(../images/game/attack_type_sm.png) no-repeat -32px -64px;
 }
+
+.attack_type32x32.abort {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat 0 0;
+}
+
+.attack_type32x32.attack_breakthrough {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -32px 0;
+}
+
+.attack_type32x32.attack_incoming {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat 0 -32px;
+}
+
+.attack_type32x32.attack_land {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -32px -32px;
+}
+
+.attack_type32x32.attack_pillage {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -64px 0;
+}
+
+.attack_type32x32.attack_portal_attack_olympus {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -64px -32px;
+}
+
+.attack_type32x32.attack_portal_support_olympus {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat 0 -64px;
+}
+
+.attack_type32x32.attack_sea {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -32px -64px;
+}
+
+.attack_type32x32.attack_spy {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -64px -64px;
+}
+
+.attack_type32x32.attack_support {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -96px 0;
+}
+
+.attack_type32x32.attack_takeover {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -96px -32px;
+}
+
+.attack_type32x32.colonization {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -96px -64px;
+}
+
+.attack_type32x32.colonization_failed {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat 0 -96px;
+}
+
+.attack_type32x32.conquer {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -32px -96px;
+}
+
+.attack_type32x32.farm_attack {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -64px -96px;
+}
+
+.attack_type32x32.foundation {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -96px -96px;
+}
+
+.attack_type32x32.illusion {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -128px 0;
+}
+
+.attack_type32x32.revolt {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -128px -32px;
+}
+
+.attack_type32x32.revolt_arising {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -128px -64px;
+}
+
+.attack_type32x32.revolt_running {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -128px -96px;
+}
+
+.attack_type32x32.siege {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat 0 -128px;
+}
+
+.attack_type32x32.support {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -32px -128px;
+}
+
+.attack_type32x32.trade {
+  background: url(../images/game/attack_type_2_sm.png) no-repeat -64px -128px;
+}
