Add team event list

--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -96,6 +96,7 @@
 
 			<mat-paginator *ngIf="from > 0 || num_results > 20" [length]="num_results"
 			               [pageSize]="size"
+                     [pageIndex]="from/size"
 			               [pageSizeOptions]="[20, 50, 100]"
 			               (page)="paginatorEvent($event)"
 			               [disabled]="paging"
