--- a/src/app/shared/dialogs/index-settings/index-settings.component.html
+++ b/src/app/shared/dialogs/index-settings/index-settings.component.html
@@ -5,30 +5,30 @@
 				<a (click)="dialogRef.close()" class="close"></a>
 				<h2 class="gd-secondary">Settings for team <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">group</mat-icon>&nbsp;{{index.name}}</span></h2>
 
-				<div class="alert alert-gd-1">
-					<h2 class="gd-secondary">Automatically delete old intel</h2>
-					<h5>If you enable this option, old intel will be deleted after a number of days, and only if there is newer intel for that specific town.
-						<br/>Old intel will not be removed if it is the only known intelligence for that town.
-					</h5>
-					<h3>Number of days to keep old intel (0 = never delete old intel):</h3>
-					<h4>
-						<mat-slider [disabled]="updating_days" [(ngModel)]="num_days" [min]="0" [max]="365" (ngModelChange)="setIndexDeleteDays()"></mat-slider>&nbsp;&nbsp;
-						<span *ngIf="num_days>0">{{num_days}} days</span>
-						<span *ngIf="num_days<=0">Indefinite</span>
-						<span *ngIf="updating_days_success" style="color: #17bc9b; font-weight: 900; font-size: 22px;">&nbsp;&nbsp;Settings saved ✓</span>
-            <mat-spinner *ngIf="updating_days" style="display: inline-block; margin-left: 10px;" mode="indeterminate" strokeWidth="2" [diameter]="20"></mat-spinner>
-					</h4>
+<!--				<div class="alert alert-gd-1">-->
+<!--					<h2 class="gd-secondary">Automatically delete old intel</h2>-->
+<!--					<h5>If you enable this option, old intel will be deleted after a number of days, and only if there is newer intel for that specific town.-->
+<!--						<br/>Old intel will not be removed if it is the only known intelligence for that town.-->
+<!--					</h5>-->
+<!--					<h3>Number of days to keep old intel (0 = never delete old intel):</h3>-->
+<!--					<h4>-->
+<!--						<mat-slider [disabled]="updating_days" [(ngModel)]="num_days" [min]="0" [max]="365" (ngModelChange)="setIndexDeleteDays()"></mat-slider>&nbsp;&nbsp;-->
+<!--						<span *ngIf="num_days>0">{{num_days}} days</span>-->
+<!--						<span *ngIf="num_days<=0">Indefinite</span>-->
+<!--						<span *ngIf="updating_days_success" style="color: #17bc9b; font-weight: 900; font-size: 22px;">&nbsp;&nbsp;Settings saved ✓</span>-->
+<!--            <mat-spinner *ngIf="updating_days" style="display: inline-block; margin-left: 10px;" mode="indeterminate" strokeWidth="2" [diameter]="20"></mat-spinner>-->
+<!--					</h4>-->
 
-					<app-alert *ngIf="days_error==''" type="{{num_days<=0?'success':'warning'}}" [dismissible]="false">
-						<h5 *ngIf="num_days>0">Town intel will be deleted after {{num_days}} days, but only if there is newer intel available for that specific town.</h5>
-						<h5 *ngIf="num_days<=0">Town intel will never be deleted</h5>
-					</app-alert>
+<!--					<app-alert *ngIf="days_error==''" type="{{num_days<=0?'success':'warning'}}" [dismissible]="false">-->
+<!--						<h5 *ngIf="num_days>0">Town intel will be deleted after {{num_days}} days, but only if there is newer intel available for that specific town.</h5>-->
+<!--						<h5 *ngIf="num_days<=0">Town intel will never be deleted</h5>-->
+<!--					</app-alert>-->
 
-					<app-alert *ngIf="days_error!=''" type="error" [dismissible]="false">
-						<h5>{{days_error}}</h5>
-					</app-alert>
+<!--					<app-alert *ngIf="days_error!=''" type="error" [dismissible]="false">-->
+<!--						<h5>{{days_error}}</h5>-->
+<!--					</app-alert>-->
 
-				</div>
+<!--				</div>-->
 
 
 			</div>
