--- a/src/app/alliance/alliance.component.html
+++ b/src/app/alliance/alliance.component.html
@@ -134,7 +134,7 @@
                 <!--</div>-->
               <!--</mat-card-title>-->
               <mat-card-content [ngClass]="{'loading-overlay': loadingHistory}">
-	              <mat-progress-bar style="margin-top: -10px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;" *ngIf="loadingMembers" mode="indeterminate"></mat-progress-bar>
+	              <mat-progress-bar style="margin-top: -10px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; opacity: .2;" *ngIf="loadingMembers" mode="indeterminate"></mat-progress-bar>
                 <div *ngIf="historyError" class="alert alert-warning text-center alert-gd-1">
                   <h3>Unable to load history. Try again later.</h3>
                 </div>
@@ -292,35 +292,36 @@
 
       </div>
 
-	    <!--TODO: alliance wars-->
-	    <!--<div class="alliance-cards" style="" fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="5px">-->
-		    <!--<mat-card class="dense-card" fxFlex="100" style="padding-bottom: 0px !important; padding-top: 10px !important;">-->
-			    <!--<mat-card-title>-->
-				    <!--<div fxLayout="row">-->
-					    <!--<h3 style='font-weight: 700; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Alliance wars (conquests)</span></h3>-->
-					    <!--<mat-spinner style="margin-left: 30px;" *ngIf="loadingWars" strokeWidth="3" [diameter]="30"></mat-spinner>-->
-				    <!--</div>-->
-			    <!--</mat-card-title>-->
-			    <!--<mat-card-content>-->
-				    <!--<div class="conquest-card-container">-->
-					    <!--<div class="conquest-card" *ngFor="let war of allianceWars">-->
-						    <!--<div class="war-title">-->
-							    <!--<div class="title-left">{{allianceName}}</div>-->
-							    <!--<div class="title-right"><a routerLink="/alliance" [queryParams]="{world: world, id: war?.alliance_id}">{{war?.alliance_name}}</a></div>-->
-						    <!--</div>-->
-						    <!--<div class="war-icon">-->
-							    <!--<mat-icon style="font-weight: 900;">⚔</mat-icon>-->
-						    <!--</div>-->
-						    <!--<div class="war-score">-->
-							    <!--<div class="score-left" ngClass="{{(war.towns_gained_from>=war.towns_lost_to) ? 'pos':'neg'}}">{{war?.towns_gained_from}}</div>-->
-							    <!--<div class="score-right" ngClass="{{(war.towns_gained_from>=war.towns_lost_to) ? 'neg':'pos'}}">{{war?.towns_lost_to}}</div>-->
-						    <!--</div>-->
-					    <!--</div>-->
-				    <!--</div>-->
+	    <!--alliance wars-->
+	    <div class="alliance-cards">
+		    <mat-card class="dense-card" style="padding-bottom: 25px !important; padding-top: 10px !important;">
+			    <mat-card-title>
+				    <div fxLayout="row">
+					    <h3 style='font-weight: 700; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Alliance wars (conquests)</span></h3>
+				    </div>
+			    </mat-card-title>
+			    <mat-card-content>
+            <mat-progress-bar *ngIf="loadingWars" mode="indeterminate" style="opacity: 0.2;"></mat-progress-bar>
+            <div class="shadow" *ngIf="allianceWars.length > 6"></div>
+				    <div class="conquest-card-container gd-scrollbar">
+					    <div class="conquest-card" *ngFor="let war of allianceWars">
+						    <div class="war-title">
+							    <div><a routerLink="/alliance" [queryParams]="{world: world, id: war?.alliance_id}">{{war?.alliance_name}}</a></div>
+						    </div>
+						    <div class="war-icon">
+							    <mat-icon style="font-weight: 900;">⚔</mat-icon>
+						    </div>
+						    <div class="war-score">
+							    <div class="score-left pos" title="{{allianceName}} has won {{war?.towns_gained_from}} towns from {{war?.alliance_name}}">{{war?.towns_gained_from}}</div>
+							    <div class="score-right neg" title="{{allianceName}} has lost {{war?.towns_lost_to}} towns to {{war?.alliance_name}}">{{war?.towns_lost_to}}</div>
+						    </div>
+					    </div>
+              <div class="push" *ngIf="allianceWars.length > 6"></div>
+				    </div>
 
-			    <!--</mat-card-content>-->
-		    <!--</mat-card>-->
-	    <!--</div>-->
+			    </mat-card-content>
+		    </mat-card>
+	    </div>
 
 	    <!--<div style="margin: -5px 17px" *ngIf="!loadingInfo && (members > 20 || rank < 50)">-->
 		    <!--<app-advertorial></app-advertorial>-->
